# osira

./: .env.example  .gitignore  pyproject.toml
config/: cartas_gestoras_template.yaml  us_letters_202602.yaml
data/: captacao_credito_privado.csv  emissoes_credito_privado.csv  ibov_pl_cvm.csv  ibov_pl_percentile_proxy.csv
data/cartas/: .gitignore  BRIEFING_CARTAS_GESTORAS.md  FONTES_CARTAS_GESTORAS.md  INVENTARIO_MES_A_MES.md
docs/: SCORING_ENGINE_BACKTEST_SPEC.md
reports/agent/: 2026-03-19-1308-investor-letters-archive.md  2026-03-19-1323-hedge-fund-letters-archive-sources.md
scripts/: download_cartas.py  download_cartas_intl.py  download_cartas_wave2.py  download_cartas_wave3.py  fetch_credit_data.py
src/osira/: __main__.py
src/osira/agents/: intelligence.py
src/osira/compliance/: anbima.py  checker.py  rules.py
src/osira/data/: letters_client.py  news_client.py
src/osira/shelf/: classifier.py  parser.py  ranking.py  taxonomy.py
